[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "address-matcher"
version = "1.0.0"
description = "ML-based address matcher with fuzzy search and logistic regression"
authors = [{name = "Scycode001"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.0",
    "rapidfuzz>=3.5.2",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.2"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "ruff>=0.1.0",
]

[project.scripts]
train = "src.train:main"
matcher = "src.matcher:main"
test = "src.test:main"

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]