[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "address-matcher"
version = "1.0.0"
description = "ML-based address matcher with fuzzy search and logistic regression"
requires-python = ">=3.9"
dependencies = [
    "pandas>=2.1.0",
    "rapidfuzz>=3.5.2",
    "scikit-learn>=1.3.0",
    "joblib>=1.3.2",
]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501", "E722"]

[tool.ruff.lint.per-file-ignores]
"src/batch_test.py" = ["E501", "F601"]
